fix: separate copyright notice into two paragraphs in footer

--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
             <kern-grid-col size="8" sm="12" md="12" lg="8">
 
                 <div class="footer">
-                    <p>AKA URL Shortener Service - ©2025 Programm digitalFirst - Senatskanzlei Hamburg.</p>
+                    <p>AKA URL Shortener Service</p>
+                    <p>© 2025 Programm digitalFirst - Senatskanzlei Hamburg.</p>
                     <p>Kontakt: <a href="mailto:axel.wolters@sk.hamburg.de">Axel Wolters - Themenbereich
                             Architektur.</a></p>
                     <p>Last Updated: <span id="last-updated">-</span></p>
