fix: add spacing between Test Redirect and Clear buttons

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
                 <br />
 
-                <kern-button variant="primary" onclick="testRedirect()">Test Redirect</kern-button>
+                <kern-button variant="primary" onclick="testRedirect()">Test Redirect</kern-button>&nbsp;&nbsp;
                 <kern-button variant="secondary" onclick="clearResult()">Clear</kern-button>
 
             </kern-grid-col>
