fix: update footer contact label from 'Kontakt' to 'Info'

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 <div class="footer">
                     <p>AKA URL Shortener Service. Build with KERN UX-Standard.</p>
                     <p>© 2025 Programm digitalFirst - Senatskanzlei Hamburg.</p>
-                    <p>Kontakt: <a href="mailto:axel.wolters@sk.hamburg.de">Axel Wolters - Themenbereich
+                    <p>Info: <a href="mailto:axel.wolters@sk.hamburg.de">Axel Wolters - Themenbereich
                             Architektur.</a></p>
                     <p>Last Updated: <span id="last-updated">-</span></p>
                 </div>
