feat: add new routing configuration for EheschliessungOhneLeika in config.json and update index.html with corresponding list item

--- a/index.html
+++ b/index.html
@@ -77,6 +77,10 @@
                             onclick="setTestUrl('/Eheschliessung?leika=99059001104000&oeid=2289&hide=true')">
                             /Eheschliessung?leika=99059001104000&oeid=2289&hide=true
                         </kern-list-item>
+                        <kern-list-item
+                            onclick="setTestUrl('/EheschliessungOhneLeika?oeid=2289&hide=true')">
+                            /EheschliessungOhneLeika?oeid=2289&hide=true
+                        </kern-list-item>
                         <kern-list-item onclick="setTestUrl('/Eheschliessung?leika=99059001104000&hide=true')">
                             /Eheschliessung?leika=99059001104000&hide=true
                         </kern-list-item>
