fix: update status labels for clarity in index.html

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
                         <span class="status-value" id="group-count">-</span>
                     </div>
                     <div class="status-item">
-                        <span class="status-label">Routing(s):</span>
+                        <span class="status-label">Routing Entries:</span>
                         <span class="status-value" id="routing-count">-</span>
                     </div>
                     <div class="status-item">
-                        <span class="status-label">Version:</span>
+                        <span class="status-label">Database Version:</span>
                         <span class="status-value" id="config-version">-</span>
                     </div>
                     <div class="status-item">
