fix: update Fira Sans font links in index.html and optimize kern-list-item onclick attributes

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AKA URL Shortener Service</title>
+    <!-- Fira Sans Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
+        rel="stylesheet">
 </head>
 
 <body data-kern-theme="light">
@@ -77,8 +83,7 @@
                             onclick="setTestUrl('/Eheschliessung?leika=99059001104000&oeid=2289&hide=true')">
                             /Eheschliessung?leika=99059001104000&oeid=2289&hide=true
                         </kern-list-item>
-                        <kern-list-item
-                            onclick="setTestUrl('/EheschliessungOhneLeika?oeid=2289&hide=true')">
+                        <kern-list-item onclick="setTestUrl('/EheschliessungOhneLeika?oeid=2289&hide=true')">
                             /EheschliessungOhneLeika?oeid=2289&hide=true
                         </kern-list-item>
                         <kern-list-item onclick="setTestUrl('/Eheschliessung?leika=99059001104000&hide=true')">
