chore: update dependencies and configuration files
- Updated @kern-ux-annex/webc from 2.20.8 to 2.20.10
- Updated compression from 1.7.4 to 1.8.1
- Updated morgan from 1.10.0 to 1.10.1
- Updated @types/node from 24.0.14 to 24.7.0
- Updated @typescript-eslint/eslint-plugin and parser from 8.37.0 to 8.46.0
- Updated eslint from 9.31.0 to 9.37.0
- Updated jsdom from 26.1.0 to 27.0.0
- Updated terser from 5.43.1 to 5.44.0
- Updated typescript from 5.8.3 to 5.9.3
- Updated vite from ^6.0.0 to ^6.3.6
- Updated public/config.json version to 1.1.8 and modified metadata timestamps
- Added new routing configurations for Ehefaehigkeitszeugnis and EhefaehigkeitszeugnisOhneLeika in public/config.json
- Updated staticwebapp.config.json to include CORS headers
- Modified status.html to include new example URLs for Ehefaehigkeitszeugnis and EhefaehigkeitszeugnisOhneLeika
- Updated footer version in status.html to V1.21

--- a/status.html
+++ b/status.html
@@ -63,12 +63,17 @@
                     <kern-heading level="3" size="small">Example URLs (click to test):</kern-heading>
                     <br />
                     <kern-list variant="simple" type="bullet" size="default">
-                        <kern-list-item
-                            onclick="setTestUrl('/Eheschliessung?leika=99059001104000&oeid=2289')">
+                        <kern-list-item onclick="setTestUrl('/Eheschliessung?leika=99059001104000&oeid=2289')">
                             /Eheschliessung?leika=99059001104000&oeid=2289
+                        </kern-list-item>
+                        <kern-list-item onclick="setTestUrl('/Ehefaehigkeitszeugnis?leika=99059002012000&oeid=2289')">
+                            /Ehefaehigkeitszeugnis?leika=99059002012000&oeid=2289
                         </kern-list-item>
                         <kern-list-item onclick="setTestUrl('/EheschliessungOhneLeika?oeid=2289')">
                             /EheschliessungOhneLeika?oeid=2289
+                        </kern-list-item>
+                        <kern-list-item onclick="setTestUrl('/EhefaehigkeitszeugnisOhneLeika?oeid=2289')">
+                            /EhefaehigkeitszeugnisOhneLeika?oeid=2289
                         </kern-list-item>
                         <kern-list-item onclick="setTestUrl('/Eheschliessung?leika=99059001104000')">
                             /Eheschliessung?leika=99059001104000
@@ -94,7 +99,7 @@
             <kern-grid-col size="8" sm="12" md="12" lg="8">
 
                 <div class="footer">
-                    <kern-body size="small">AKA URL Shortener Service. Build with KERN UX-Standard.</kern-body>
+                    <kern-body size="small">AKA URL Shortener Service V1.21. Build with KERN UX-Standard.</kern-body>
                     <kern-body size="small">© 2025 Programm digitalFirst - Senatskanzlei Hamburg.</kern-body>
                     <kern-body size="small">Info: <a href="mailto:axel.wolters@sk.hamburg.de">Axel Wolters -
                             Themenbereich
