feat: update routing configurations and enhance status page with new test URLs. Config Version 1.2.2 18.11.2025

--- a/status.html
+++ b/status.html
@@ -63,6 +63,12 @@
                     <kern-heading level="3" size="small">Example URLs (click to test):</kern-heading>
                     <br />
                     <kern-list variant="simple" type="bullet" size="default">
+                        <kern-list-item onclick="setTestUrl('/SterbefallEinrichtung?leika=99101011261002&oeid=2290')">
+                            /SterbefallEinrichtung?leika=99101011261002&oeid=2290
+                        </kern-list-item>
+                        <kern-list-item onclick="setTestUrl('/Sterbefallbeurkundungen?leika=99101011261000&oeid=2290')">
+                            /Sterbefallbeurkundungen?leika=99101011261000&oeid=2290
+                        </kern-list-item>
                         <kern-list-item onclick="setTestUrl('/Eheschliessung?leika=99059001104000&oeid=2289')">
                             /Eheschliessung?leika=99059001104000&oeid=2289
                         </kern-list-item>
